Holger pointed out that we have a Moule Base64 encoder so bye bye sun Base64 encoder.
git-svn-id: file:///home/projects/mule/scm@4756 bf997673-6b11-0410-b953-e057580c5b09